fix overflow bars

--- a/styles/index.css
+++ b/styles/index.css
@@ -31,7 +31,7 @@ a:hover {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  overflow: scroll;
+  overflow: auto;
 }
 
 .title {
